--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Anthony Crisostomo, Front End Developer</h1>
-    <p>I am diving in deep now, please join me then!</p>
+	<div class="container-fluid text-center">
+    	<div class="">
+    	    <h1>Anthony Crisostomo, Front-End Developer</h1>
+    	    <p>I am diving in deep now, please join me then!</p>
+    	    <p>This site is currently under construction.</p>
+    	</div>
+    </div>
 </body>
 </html>
